@@ -5,9 +5,10 @@ To achieve high availability
 you can place multiple instances of APM Server behind a regular HTTP load balancer,
 for example HAProxy or nginx.
 
-The endpoint `/healthcheck` always returns a `HTTP 200`.
+The endpoint `/` always returns an `HTTP 200`.
 You can configure your load balancer to send HTTP requests to this endpoint
 to determine if an APM Server is running.
+See <<server-info>> for more information on that endpoint.
 
 In case of temporal issues, like unavailable Elasticsearch or a sudden high workload,
 the data is buffered in an internal memory queue and ingestion retried.
