@@ -14,6 +14,8 @@ https://github.com/elastic/apm-server/compare/6.4\...master[View commits]
 === Added
 
 - Listen on default port 8200 if unspecified {pull}[886]886.
+- Provide basic server information at `/` {pull}1197[1197]
+
 [[release-notes-6.4]]
 == APM Server version 6.4
 
